// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Property /> can render a basic property 1`] = `
<tr
  className="undefined"
  onClick={[Function]}
>
  <td
    className=""
  >
    <span>
      type
    </span>
  </td>
  <td
    className={undefined}
  >
    <span
      className={undefined}
    >
      string
    </span>
    <span
      className={undefined}
    >
      <span
        className={undefined}
      >
        required
      </span>
    </span>
  </td>
</tr>
`;

exports[`<Property /> can render a property with a format 1`] = `
<tr
  className=""
  onClick={[Function]}
>
  <td
    className=""
  >
    <span>
      value
    </span>
  </td>
  <td
    className={undefined}
  >
    <span
      className={undefined}
    >
      string
      <span
        className={undefined}
      >
        &lt;
        email
        &gt;
      </span>
    </span>
    <span
      className={undefined}
    />
  </td>
</tr>
`;

exports[`<Property /> can render a property with a subtype 1`] = `
<tr
  className=""
  onClick={[Function]}
>
  <td
    className=""
  >
    <span>
      data
    </span>
  </td>
  <td
    className={undefined}
  >
    <span
      className={undefined}
    >
      <span
        className={undefined}
      >
        object
        []
      </span>
    </span>
    <span
      className={undefined}
    />
  </td>
</tr>
`;

exports[`<Property /> can render a property with description 1`] = `
<tr
  className=""
  onClick={[Function]}
>
  <td
    className=""
  >
    <span>
      type
    </span>
  </td>
  <td
    className={undefined}
  >
    <span
      className={undefined}
    >
      string
    </span>
    <span
      className={undefined}
    >
      <span
        className={undefined}
      >
        required
      </span>
    </span>
    <div
      className={undefined}
    >
      <div>
        <div
          className="undefined"
          dangerouslySetInnerHTML={
            Object {
              "__html": "This is <em>markdown</em> text",
            }
          }
        />
      </div>
    </div>
  </td>
</tr>
`;

exports[`<Property /> can render a property with docs 1`] = `
<tr
  className=""
  onClick={[Function]}
>
  <td
    className=""
  >
    <span>
      value
    </span>
  </td>
  <td
    className={undefined}
  >
    <span
      className={undefined}
    >
      string
    </span>
    <span
      className={undefined}
    />
    <div
      className={undefined}
    >
      <div
        className=""
      >
        <div
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Hello</p>
            ",
            }
          }
        />
        <a
          href="http://example.org"
          rel="noopener noreferrer"
          target="_blank"
        >
          More information »
        </a>
      </div>
    </div>
  </td>
</tr>
`;

exports[`<Property /> can render a property with enum 1`] = `
<tr
  className=""
  onClick={[Function]}
>
  <td
    className=""
  >
    <span>
      packagingType
    </span>
  </td>
  <td
    className={undefined}
  >
    <span
      className={undefined}
    >
      string
    </span>
    <span
      className={undefined}
    >
      <span
        className={undefined}
      >
        required
      </span>
    </span>
    <div
      className={undefined}
    >
      <div>
        <span>
          Valid values:
        </span>
        <span
          className={undefined}
        >
          box
        </span>
        <span
          className={undefined}
        >
          carton
        </span>
      </div>
    </div>
  </td>
</tr>
`;

exports[`<Property /> can render a property with multiple types 1`] = `
<tr
  className=""
  onClick={[Function]}
>
  <td
    className=""
  >
    <span>
      value
    </span>
  </td>
  <td
    className={undefined}
  >
    <span
      className={undefined}
    >
      string, number
    </span>
    <span
      className={undefined}
    />
  </td>
</tr>
`;

exports[`<Property /> can render a property with numerical constraints 1`] = `
<tr
  className=""
  onClick={[Function]}
>
  <td
    className=""
  >
    <span>
      type
    </span>
  </td>
  <td
    className={undefined}
  >
    <span
      className={undefined}
    >
      number
    </span>
    <span
      className={undefined}
    >
      <span
        className={undefined}
      >
        required
      </span>
      <span>
        <span
          className={undefined}
        >
          multiple of 2
        </span>
      </span>
    </span>
  </td>
</tr>
`;
